Add menu bar and admin pages
Add menu bar and admin pages

--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -7,3 +7,10 @@ body{
         margin-top: 20px;
     
 }
+
+
+.editable-row .ant-form-item-explain {
+    position: absolute;
+    top: 100%;
+    font-size: 12px;
+  }
