--- a/frontend/src/css/mydiv.css
+++ b/frontend/src/css/mydiv.css
@@ -31,6 +31,7 @@
 
 
 
+
 .editable-cell {
   position: relative;
 }
@@ -50,3 +51,8 @@
   border: 1px solid #434343;
 }
 
+[data-theme="compact"] .code-box-demo .ant-alert {
+  margin-bottom: 8px;
+}
+
+ .hidden { display:none; }
